--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
     <script type="text/javascript" src="cookies.min.js"></script>
     <title>cookies</title>
   </head>
+
   <body>
-    <h1>Pick your cookies:</h1>
-    <img id="happycookie" src="happycookie.jpg" alt="happy cookie">
+    <h1>
+      <img id="happycookie" src="images/happycookie.jpg" alt="happy cookie">
+      Pick your cookies:
+    </h1>
+
+    <div class="cookies">
+      <img id="sugar" src="images/sugarcookie.jpg" alt="sugar cookie">
+      <img id="chocolate" src="images/chocolatecookie.jpg" alt="chocolate chip cookie">
+      <img id="lemon" src="images/lemoncookie.jpg" alt="lemon cookie">
+    </div>
+
     <div class="buttons">
       <button id="sugarbutton" type="button" name="button">sugar cookie</button>
       <button id="chocolatebutton" type="button" name="button">chocolate chip cookie</button>
@@ -32,5 +42,6 @@
     <div class="crumble"> </div>
 
     <script type="text/javascript" src="main.js"></script>
+
   </body>
 </html>
